cambios al footer

--- a/html/Resgistro.html
+++ b/html/Resgistro.html
@@ -130,7 +130,7 @@
       
     <section class="footer-b">
       <div class="conteiner-fluid text-lg-start mt-5 " >
-        <img src="../images/logo.1.png" alt="" width="100px" class="mt-2">
+        <img src="./images/logo.1.png" alt="" width="100px" class="mt-2">
       </div>
         <div class="container-fluid">
             <div class="row">
@@ -148,9 +148,9 @@
                     <a href="./html/IniciarSesion.html" class="p-3 text-decoration-none">Cuenta</a>
                     <p class="text-white">@Copyright Todos los derechos reservados.</p>
                 </div>
-            </div>
-        </div>
-    </section>
+             </div>
+         </div>
+     </section>
   </footer>
 
 
