--- a/html/sobre_nosotros.html
+++ b/html/sobre_nosotros.html
@@ -114,23 +114,23 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-12 text-sm-center">
-                        <a href="./html/error404.html" class="fa fa-facebook p-2" ></a>
-                        <a href="./html/error404.html" class="fa fa-twitter p-2" ></a>
-                        <a href="./html/error404.html" class="fa fa-instagram p-2" ></a>
-                        <a href="./html/error404.html" class="fa fa-youtube p-2" ></a>
-                        <a href="./html/error404.html" class="fa fa-linkedin p-2" ></a>
+                        <a href="./error404.html" class="fa fa-facebook p-2" ></a>
+                        <a href="./error404.html" class="fa fa-twitter p-2" ></a>
+                        <a href="./error404.html" class="fa fa-instagram p-2" ></a>
+                        <a href="./error404.html" class="fa fa-youtube p-2" ></a>
+                        <a href="./error404.html" class="fa fa-linkedin p-2" ></a>
                     </div>
                     <div class="col-sm-12  text-sm-center text-lg-end  ">
                         
-                        <a href="./index.html" class="p-3 text-decoration-none">Inicio</a>
-                        <a href="./html/contacto.html" class="p-3 text-decoration-none">Ayuda</a>
-                        <a href="./html/IniciarSesion.html" class="p-3 text-decoration-none">Cuenta</a>
+                        <a href="../index.html" class="p-3 text-decoration-none">Inicio</a>
+                        <a href="./contacto.html" class="p-3 text-decoration-none">Ayuda</a>
+                        <a href="./IniciarSesion.html" class="p-3 text-decoration-none">Cuenta</a>
                         <p class="text-white">@Copyright Todos los derechos reservados.</p>
                     </div>
                 </div>
             </div>
         </section>
-     </footer>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
