añado js inicial

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -59,8 +59,8 @@
                 </ul>
               
                 <div>
-                    <button type="button" class="btn btn-secondary btn-inicio"><a href="../html/IniciarSesion.html" class="a-red">Iniciar Sesion</a></button>
-                    <button type="button" class="btn btn-secondary btn-regist"><a href="../html/Resgistro.html" class="a-red">Registrate</a></button>
+                    <button type="button" class="btn btn-secondary btn-inicio"><a href="./IniciarSesion.html" class="a-red">Iniciar Sesion</a></button>
+                    <button type="button" class="btn btn-secondary btn-regist"><a href="./Resgistro.html" class="a-red">Registrate</a></button>
                 </div>
             </div>
         </div>
@@ -195,8 +195,8 @@
                   <div class="col-sm-12  text-sm-center text-lg-end  ">
                       
                       <a href="./index.html" class="p-3 text-decoration-none">Inicio</a>
-                      <a href="./html/contacto.html" class="p-3 text-decoration-none">Ayuda</a>
-                      <a href="./html/IniciarSesion.html" class="p-3 text-decoration-none">Cuenta</a>
+                      <a href="./contacto.html" class="p-3 text-decoration-none">Ayuda</a>
+                      <a href="./IniciarSesion.html" class="p-3 text-decoration-none">Cuenta</a>
                       <p class="text-white">@Copyright Todos los derechos reservados.</p>
                   </div>
               </div>
