--- a/html/sobre_nosotros.html
+++ b/html/sobre_nosotros.html
@@ -33,13 +33,13 @@
                                 Categorias
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./error404.html">Peliculas</a></li>
-                                <li><a class="dropdown-item" href="./error404.html">Series</a></li>
+                                <li><a class="dropdown-item" href="error404.html">Peliculas</a></li>
+                                <li><a class="dropdown-item" href="error404.html">Series</a></li>
                                 <li>
                                     <hr class="dropdown-divider" />
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="./error404.html">Tendencia</a>
+                                    <a class="dropdown-item" href="error404.html">Tendencia</a>
                                 </li>
                             </ul>
                         </li>
@@ -57,8 +57,8 @@
                     </ul>
                   
                     <div>
-                        <button type="button" class="btn btn-secondary btn-inicio"><a href="../html/IniciarSesion.html" class="a-red">Iniciar Sesion</a></button>
-                        <button type="button" class="btn btn-secondary btn-regist"><a href="../html/Resgistro.html" class="a-red">Registrate</a></button>
+                        
+                        <button type="button" class="btn btn-secondary btn-regist"><a href="#" class="a-red" id="idLogout">Carrar Sesion</a></button>
                     </div>
                 </div>
             </div>
